--- a/SoftEngine/SoftEngine.csproj
+++ b/SoftEngine/SoftEngine.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Code\Camera.cs" />
     <Compile Include="Code\Device.cs" />
+    <Compile Include="Code\Face.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
